deploy/kustomize/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: savvy
  labels:
    name: savvy
    app.kubernetes.io/name: savvy
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
