deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: savvy
  labels:
    app.kubernetes.io/name: savvy
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: savvy
